--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             class="footer__link"
             id="profile-link"
           >
-            Git-hub
+            <i class="c:\Users\orner\Downloads\github.png">GitHub</i>
           </a>
         </div>
 
