--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>PreEntrega1_Romano</title>
   </head>
@@ -104,18 +108,39 @@
         <div class="footer__contact">
           <strong>Contacto</strong>
           <br />
-          WhatsApp: +54 0280 433-2111
-          <br />
-          orneroma@gmail.com
-          <br />
           <a
             href="https://github.com/KilluaOR"
             target="_blank"
             class="footer__link"
             id="profile-link"
           >
-            <i class="c:\Users\orner\Downloads\github.png">GitHub</i>
+            <i class="fi fi-brands-github"></i>
           </a>
+          <a
+            href="https://www.instagram.com/orne_romano/?hl=es"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+          >
+            <i class="fi fi-brands-instagram"></i>
+          </a>
+
+          <a
+            href="https://www.facebook.com/ornella.romano.775/"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+            ><i class="fi fi-brands-facebook"></i
+          ></a>
+
+          <a
+            href="tel:+54 280 433 2111"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+          >
+            <i class="fi fi-brands-whatsapp"></i
+          ></a>
         </div>
 
         <div class="footer__paginas">
