--- a/pages/projects.html
+++ b/pages/projects.html
@@ -141,18 +141,39 @@
         <div class="footer__contact">
           <strong>Contacto</strong>
           <br />
-          WhatsApp: +54 0280 433-2111
-          <br />
-          orneroma@gmail.com
-          <br />
           <a
             href="https://github.com/KilluaOR"
             target="_blank"
-            class="footer--link"
+            class="footer__link"
             id="profile-link"
           >
-            Git-hub
+            <i class="fi fi-brands-github"></i>
           </a>
+          <a
+            href="https://www.instagram.com/orne_romano/?hl=es"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+          >
+            <i class="fi fi-brands-instagram"></i>
+          </a>
+
+          <a
+            href="https://www.facebook.com/ornella.romano.775/"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+            ><i class="fi fi-brands-facebook"></i
+          ></a>
+
+          <a
+            href="tel:+54 280 433 2111"
+            target="_blank"
+            class="footer__link"
+            id="profile-link"
+          >
+            <i class="fi fi-brands-whatsapp"></i
+          ></a>
         </div>
 
         <div class="footer__paginas">
