--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,10 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>PreEntrega1_Romano</title>
   </head>
@@ -77,9 +81,9 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main">
       <!--formulario-->
-      <section>
+      <section class="container container__section">
         <h2>Contactame:</h2>
         <form action="procesarform" method="post">
           <fieldset>
