--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,10 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>PreEntrega1_Romano</title>
   </head>
