--- a/pages/designs.html
+++ b/pages/designs.html
@@ -9,6 +9,10 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>PreEntrega1_Romano</title>
   </head>
@@ -78,7 +82,8 @@
       </nav>
     </header>
     <!--main-->
-    <main>
+    <main class="main">
+      <section class="container container__section">
       <img class="design-img" src="" alt="design" />
       <h2>Design 1</h2>
       <p class="design-text">
