--- a/pages/about.html
+++ b/pages/about.html
@@ -84,9 +84,8 @@
     <main class="main">
       <!--breve descripción de mi persona-->
       <section class="container container__section">
-        <h1>Breve descripción de mi persona</h1>
-        <div class="div div__content">
-          <img class="div__img" src="" alt="imagen" />
+        <div class="div parte1">
+          <h1>Breve descripción de mi persona</h1>
           <h2 class="div__title">Ornella Romano</h2>
           <p class="div__texto">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -98,9 +97,14 @@
             molestias?
           </p>
         </div>
+        <div class="div parte2">
+          <img class="div__img" src="" alt="imagen" />
+        </div>
         <!--Educacion-->
-        <div class="div div__content">
+        <div class="div parte3">
           <h3 class="div__title">Antecedentes Académicos</h3>
+        </div>
+        <div class="div parte4">
           <h4 class="div__subt">Educación básica:</h4>
           <p class="div__texto">
             <br />
@@ -108,7 +112,8 @@
             <br />
             Escuela Mutualista (2014-2020)
           </p>
-          <!--e-univ: educación universitaria y terciaria-->
+        </div>
+        <div class="div parte5">
           <h4 class="div__subt">Educación Universitaria y terciaria</h4>
           <p class="div__texto">
             <br />
