--- a/pages/designs.html
+++ b/pages/designs.html
@@ -24,7 +24,7 @@
           <a class="navbar-brand" href="#">
             <img
               class="svg"
-              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.jpeg"
+              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.png"
               alt="logo"
             />
           </a>
