--- a/pages/about.html
+++ b/pages/about.html
@@ -85,20 +85,16 @@
       <!--breve descripción de mi persona-->
       <section class="container container__section">
         <div class="div parte1">
-          <h1>Breve descripción de mi persona</h1>
           <h2 class="div__title">Ornella Romano</h2>
-          <p class="div__texto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            <br />
-            Nesciunt error nulla asperiores distinctio assumenda eveniet, esse
-            corporis sed
-            <br />
-            sint ad voluptas nihil fuga porro quam in animi, unde, tempore
-            molestias?
-          </p>
+          <img class="div__img" src="" alt="imagen" />
         </div>
         <div class="div parte2">
-          <img class="div__img" src="" alt="imagen" />
+          <p class="div__texto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+            error nulla asperiores distinctio assumenda eveniet, esse corporis
+            sed sint ad voluptas nihil fuga porro quam in animi, unde, tempore
+            molestias?
+          </p>
         </div>
         <!--Educacion-->
         <div class="div parte3">
