--- a/pages/about.html
+++ b/pages/about.html
@@ -101,18 +101,14 @@
           <h3 class="div__title">Antecedentes Académicos</h3>
         </div>
         <div class="div parte4">
-          <h4 class="div__subt">Educación básica:</h4>
+          <h4 class="div__subt">Educación básica</h4>
           <p class="div__texto">
-            <br />
-            Bachiller de Cs. Naturales
-            <br />
-            Escuela Mutualista (2014-2020)
+            Bachiller de Cs. Naturales Escuela Mutualista (2014-2020)
           </p>
         </div>
         <div class="div parte5">
           <h4 class="div__subt">Educación Universitaria y terciaria</h4>
           <p class="div__texto">
-            <br />
             Universidad Nacional de la Patagonia
             <br />
             San Juan Bosco(en proceso)
