--- a/pages/projects.html
+++ b/pages/projects.html
@@ -83,17 +83,18 @@
     </header>
     <!--main-->
     <main class="main">
-      <section class="container container__section" id="projects">
-        <h1 class="projects-title">Algunos de mis proyectos</h1>
-
-        <div class="projects-part">
+      <section class="container container__projects" id="projects">
+        <div class="proy1">
+          <h1>Algunos de mis proyectos</h1>
+        </div>
+        <div class="proy2">
           <a
             href="http://127.0.0.1:5500/registration%20form/idex.html"
             target="_blank"
             class="project project-tile"
           >
             <img
-              class="project-img"
+              class="project__img"
               src="https://i.postimg.cc/8zqk7sqv/Captura-de-pantalla-2024-10-29-135644.jpg"
               alt="project"
             />
@@ -103,14 +104,15 @@
               >
             </p>
           </a>
-
+        </div>
+        <div class="proy3">
           <a
             href="http://127.0.0.1:5500/survey%20form.%20firs%20test/index.html"
             target="_blank"
             class="project project-tile"
           >
             <img
-              class="project-img"
+              class="project__img"
               src="https://i.postimg.cc/CLcspp9X/Captura-de-pantalla-2024-10-29-145653.jpg"
               alt="project"
             />
@@ -118,13 +120,15 @@
               <span class="code"><</span>Survey Form<span class="code">/></span>
             </p>
           </a>
+        </div>
+        <div class="proy4">
           <a
             href="http://127.0.0.1:5500/technical%20documentation%20page/index.html"
             target="_blank"
             class="project project-tile"
           >
             <img
-              class="project-img"
+              class="project__img"
               src="https://i.postimg.cc/hGdLmzhR/Captura-de-pantalla-2024-10-29-145850.jpg"
               alt="project"
             />
