--- a/pages/about.html
+++ b/pages/about.html
@@ -83,13 +83,13 @@
     </header>
     <main class="main">
       <!--breve descripción de mi persona-->
-      <section class="container container__section">
-        <div class="div parte1">
-          <h2 class="div__title">Ornella Romano</h2>
-          <img class="div__img" src="" alt="imagen" />
+      <section class="container about">
+        <div class="about__header parte1">
+          <h2 class="about__title">Ornella Romano</h2>
+          <img class="about__img" src="" alt="imagen" />
         </div>
-        <div class="div parte2">
-          <p class="div__texto">
+        <div class="about__section parte2">
+          <p class="about__texto">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
             error nulla asperiores distinctio assumenda eveniet, esse corporis
             sed sint ad voluptas nihil fuga porro quam in animi, unde, tempore
@@ -97,18 +97,18 @@
           </p>
         </div>
         <!--Educacion-->
-        <div class="div parte3">
-          <h3 class="div__title">Antecedentes Académicos</h3>
+        <div class="about__section parte3">
+          <h3 class="about__title">Antecedentes Académicos</h3>
         </div>
-        <div class="div parte4">
-          <h4 class="div__subt">Educación básica</h4>
-          <p class="div__texto">
+        <div class="about__section parte4">
+          <h4 class="about__subt">Educación básica</h4>
+          <p class="about__texto">
             Bachiller de Cs. Naturales Escuela Mutualista (2014-2020)
           </p>
         </div>
-        <div class="div parte5">
-          <h4 class="div__subt">Educación Universitaria y terciaria</h4>
-          <p class="div__texto">
+        <div class="about__section parte5">
+          <h4 class="about__subt">Educación Universitaria y terciaria</h4>
+          <p class="about__texto">
             Universidad Nacional de la Patagonia
             <br />
             San Juan Bosco(en proceso)
