--- a/index.html
+++ b/index.html
@@ -97,22 +97,21 @@
       <div
         class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
       >
-        <h1>Ornella Romano</h1>
-        <img src="" alt="foto" />
-        <h2>Web Developer</h2>
+        <h1 class="main__title">Ornella Romano</h1>
+        <img class="main__image" src="" alt="foto" />
+        <h2 class="main__subt">Web Developer</h2>
       </div>
     </main>
     <!--footer-->
     <footer class="footer">
       <section class="footer__sec">
         <div class="footer__contact">
-          <strong>Contacto</strong>
+          <strong class="footer__title">Contacto</strong>
           <br />
           <a
             href="https://github.com/KilluaOR"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-github"></i>
           </a>
@@ -120,7 +119,6 @@
             href="https://www.instagram.com/orne_romano/?hl=es"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-instagram"></i>
           </a>
@@ -129,16 +127,10 @@
             href="https://www.facebook.com/ornella.romano.775/"
             target="_blank"
             class="footer__link"
-            id="profile-link"
             ><i class="fi fi-brands-facebook"></i
           ></a>
 
-          <a
-            href="tel:+54 280 433 2111"
-            target="_blank"
-            class="footer__link"
-            id="profile-link"
-          >
+          <a href="tel:+54 280 433 2111" target="_blank" class="footer__link">
             <i class="fi fi-brands-whatsapp"></i
           ></a>
         </div>
@@ -146,6 +138,9 @@
         <div class="footer__paginas">
           <p>
             <strong>Páginas</strong>
+          </p>
+
+          <ul class="footer__list">
             <li><a class="footer__link" href="index.html">Inicio</a></li>
             <li>
               <a class="footer__link" href="./pages/about.html">Sobre Mi</a>
@@ -159,7 +154,7 @@
             <li>
               <a class="footer__link" href="./pages/designs.html">Contacto</a>
             </li>
-          </p>
+          </ul>
         </div>
       </section>
     </footer>
