cambios en projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -83,60 +83,62 @@
     </header>
     <!--main-->
     <main class="main">
-      <section class="container container__projects" id="projects">
-        <div class="proy1">
-          <h1>Algunos de mis proyectos</h1>
+      <section class="container projects">
+        <div class="projects__header">
+          <h1 class="projects__title">Algunos de mis proyectos</h1>
         </div>
-        <div class="proy2">
+        <div class="projects__item projects__item--form">
           <a
             href="http://127.0.0.1:5500/registration%20form/idex.html"
             target="_blank"
-            class="project project-tile"
+            class="project"
           >
             <img
               class="project__img"
               src="https://i.postimg.cc/8zqk7sqv/Captura-de-pantalla-2024-10-29-135644.jpg"
               alt="project"
             />
-            <p class="hover-container">
-              <span class="code"><</span>Registration Form<span class="code"
+            <p class="projects__title">
+              <span class="project__code"><</span>Registration Form<span
+                class="project__code"
                 >/></span
               >
             </p>
           </a>
         </div>
-        <div class="proy3">
+        <div class="projects__item projects__item--survey">
           <a
             href="http://127.0.0.1:5500/survey%20form.%20firs%20test/index.html"
             target="_blank"
-            class="project project-tile"
+            class="project"
           >
             <img
               class="project__img"
               src="https://i.postimg.cc/CLcspp9X/Captura-de-pantalla-2024-10-29-145653.jpg"
               alt="project"
             />
-            <p class="hover-container">
-              <span class="code"><</span>Survey Form<span class="code">/></span>
+            <p class="project__title">
+              <span class="project__code"><</span>Survey Form<span
+                class="project__code"
+                >/></span
+              >
             </p>
           </a>
         </div>
-        <div class="proy4">
+        <div class="project__item project__item--docs">
           <a
             href="http://127.0.0.1:5500/technical%20documentation%20page/index.html"
             target="_blank"
-            class="project project-tile"
+            class="project"
           >
             <img
               class="project__img"
               src="https://i.postimg.cc/hGdLmzhR/Captura-de-pantalla-2024-10-29-145850.jpg"
               alt="project"
             />
-            <p class="hover-container">
-              <span class="code"><</span>Technical documentation page<span
-                class="code"
-                >/></span
-              >
+            <p class="project__title">
+              <span class="project__code"><</span>Technical documentation
+              page<span class="project__code">/></span>
             </p>
           </a>
         </div>
