changes in projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -98,7 +98,7 @@
               src="https://i.postimg.cc/8zqk7sqv/Captura-de-pantalla-2024-10-29-135644.jpg"
               alt="project"
             />
-            <p class="projects__title">
+            <p class="project__title">
               <span class="project__code"><</span>Registration Form<span
                 class="project__code"
                 >/></span
