cambios en projects styles

--- a/pages/designs.html
+++ b/pages/designs.html
@@ -83,26 +83,27 @@
     </header>
     <!--main-->
     <main class="main">
-      <section class="container container__section">
-      <img class="design-img" src="" alt="design" />
-      <h2>Design 1</h2>
-      <p class="design-text">
+      <section class="container designs">
+        <div class="disign__item design__item--1">
+      <img class="designs__img" src="" alt="design" />
+      <h2 class="design__title">Design 1</h2>
+      <p class="design__text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus
         rerum maxime sint, consequuntur eaque asperiores repellat sequi corrupti
         provident dolor impedit praesentium fugiat illum vero ab quibusdam
         adipisci tenetur minima.
       </p>
 
-      <img class="design-img" src="" alt="design" />
-      <h2>Design 2</h2>
-      <p class="design-text">
+      <img class="design__img" src="" alt="design" />
+      <h2 class="design__title">Design 2</h2>
+      <p class="design__text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
         excepturi numquam odit laborum velit recusandae, iste consequuntur
         minus. Autem ipsam cumque aut. Molestiae voluptatibus, tenetur cum at
         iste velit sapiente!
       </p>
-      <button class="contacto-btn">
-        <a href="contact.html">Contactame para pedir tu diseño</a>
+      <button class="design__btn">
+        <a class="design__btn--text" href="contact.html">Contactame para pedir tu diseño</a>
       </button>
     </main>
     <!--footer-->
