cambios en footer html

--- a/pages/about.html
+++ b/pages/about.html
@@ -128,7 +128,6 @@
             href="https://github.com/KilluaOR"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-github"></i>
           </a>
@@ -136,7 +135,6 @@
             href="https://www.instagram.com/orne_romano/?hl=es"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-instagram"></i>
           </a>
@@ -145,16 +143,10 @@
             href="https://www.facebook.com/ornella.romano.775/"
             target="_blank"
             class="footer__link"
-            id="profile-link"
             ><i class="fi fi-brands-facebook"></i
           ></a>
 
-          <a
-            href="tel:+54 280 433 2111"
-            target="_blank"
-            class="footer__link"
-            id="profile-link"
-          >
+          <a href="tel:+54 280 433 2111" target="_blank" class="footer__link">
             <i class="fi fi-brands-whatsapp"></i
           ></a>
         </div>
