--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,33 +83,43 @@
     </header>
     <main class="main">
       <!--formulario-->
-      <section class="container container__section">
-        <h2>Contactame:</h2>
-        <form class="form" action="procesarform" method="post">
-          <fieldset class="form__fieldset">
-            <legend class="form__leg">Formulario de contacto</legend>
-            <label class="leg__content" for="name">Nombre:</label>
+      <section class="container contact">
+        <h2 class="contact__title">Contactame:</h2>
+        <form class="contact__form" action="procesarform" method="post">
+          <fieldset class="contact__form-fieldset">
+            <legend class="contact__form-legend">Formulario de contacto</legend>
+            <label class="contact__label contact__label--name" for="name"
+              >Nombre:</label
+            >
             <input
-              class="leg__content"
+              class="contact__input contact__input--name"
               type="text"
               id="name"
               name="name"
               required
             />
-            <label class="leg__content" for="email">Email:</label>
+            <label class="ccontact__label contact__label--email" for="email"
+              >Email:</label
+            >
             <input
-              class="leg__content"
+              class="contact__input contact__input--email"
               type="text"
               id="email"
               name="email"
               required
             />
-            <label class="leg__content" for="message"
+            <label class="contact__label contact__label--message" for="message"
               >Escribe tu mensaje:</label
             >
-            <textarea name="message" id="message" rows="4" required></textarea>
+            <textarea
+              class="contact__textarea"
+              name="message"
+              id="message"
+              rows="4"
+              required
+            ></textarea>
           </fieldset>
-          <button type="submit">Enviar</button>
+          <button class="contact__btn" type="submit">Enviar</button>
         </form>
       </section>
     </main>
@@ -123,7 +133,6 @@
             href="https://github.com/KilluaOR"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-github"></i>
           </a>
@@ -131,7 +140,6 @@
             href="https://www.instagram.com/orne_romano/?hl=es"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-instagram"></i>
           </a>
@@ -140,16 +148,10 @@
             href="https://www.facebook.com/ornella.romano.775/"
             target="_blank"
             class="footer__link"
-            id="profile-link"
             ><i class="fi fi-brands-facebook"></i
           ></a>
 
-          <a
-            href="tel:+54 280 433 2111"
-            target="_blank"
-            class="footer__link"
-            id="profile-link"
-          >
+          <a href="tel:+54 280 433 2111" target="_blank" class="footer__link">
             <i class="fi fi-brands-whatsapp"></i
           ></a>
         </div>
