--- a/pages/projects.html
+++ b/pages/projects.html
@@ -155,7 +155,6 @@
             href="https://github.com/KilluaOR"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-github"></i>
           </a>
@@ -163,7 +162,6 @@
             href="https://www.instagram.com/orne_romano/?hl=es"
             target="_blank"
             class="footer__link"
-            id="profile-link"
           >
             <i class="fi fi-brands-instagram"></i>
           </a>
@@ -172,16 +170,10 @@
             href="https://www.facebook.com/ornella.romano.775/"
             target="_blank"
             class="footer__link"
-            id="profile-link"
             ><i class="fi fi-brands-facebook"></i
           ></a>
 
-          <a
-            href="tel:+54 280 433 2111"
-            target="_blank"
-            class="footer__link"
-            id="profile-link"
-          >
+          <a href="tel:+54 280 433 2111" target="_blank" class="footer__link">
             <i class="fi fi-brands-whatsapp"></i
           ></a>
         </div>
