--- a/pages/designs.html
+++ b/pages/designs.html
@@ -84,33 +84,42 @@
     <!--main-->
     <main class="main">
       <section class="container designs">
-        <div class="disign__item design__item--1">
-      <img class="designs__img" src="" alt="design" />
-      <h2 class="design__title">Design 1</h2>
-      <p class="design__text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus
-        rerum maxime sint, consequuntur eaque asperiores repellat sequi corrupti
-        provident dolor impedit praesentium fugiat illum vero ab quibusdam
-        adipisci tenetur minima.
-      </p>
-
-      <img class="design__img" src="" alt="design" />
-      <h2 class="design__title">Design 2</h2>
-      <p class="design__text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
-        excepturi numquam odit laborum velit recusandae, iste consequuntur
-        minus. Autem ipsam cumque aut. Molestiae voluptatibus, tenetur cum at
-        iste velit sapiente!
-      </p>
-      <button class="design__btn">
-        <a class="design__btn--text" href="contact.html">Contactame para pedir tu diseño</a>
-      </button>
+        <div class="design__item design__item--1">
+          <img class="design__img" src="" alt="design" />
+          <h2 class="design__title">Design 1</h2>
+          <p class="design__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Necessitatibus rerum maxime sint, consequuntur eaque asperiores
+            repellat sequi corrupti provident dolor impedit praesentium fugiat
+            illum vero ab quibusdam adipisci tenetur minima.
+          </p>
+        </div>
+        <div class="design__item design__item--2">
+          <img class="design__img" src="" alt="design" />
+          <h2 class="design__title">Design 2</h2>
+          <p class="design__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
+            excepturi numquam odit laborum velit recusandae, iste consequuntur
+            minus. Autem ipsam cumque aut. Molestiae voluptatibus, tenetur cum
+            at iste velit sapiente!
+          </p>
+        </div>
+        <div class="design__item design__item--3">
+          <button class="design__btn">
+            <a class="design__btn--text" href="contact.html"
+              >Contactame para pedir tu diseño</a
+            >
+          </button>
+        </div>
+      </section>
     </main>
     <!--footer-->
     <footer class="footer">
       <section class="footer__sec">
         <div class="footer__contact">
-          <strong>Contacto</strong>
+          <p>
+            <strong class="footer__title">Contacto</strong>
+          </p>
           <br />
           <a
             href="https://github.com/KilluaOR"
@@ -134,11 +143,7 @@
             ><i class="fi fi-brands-facebook"></i
           ></a>
 
-          <a
-            href="tel:+54 280 433 2111"
-            target="_blank"
-            class="footer__link"
-          >
+          <a href="tel:+54 280 433 2111" target="_blank" class="footer__link">
             <i class="fi fi-brands-whatsapp"></i
           ></a>
         </div>
@@ -146,6 +151,9 @@
         <div class="footer__paginas">
           <p>
             <strong>Páginas</strong>
+          </p>
+          <br />
+          <ul class="footer__list">
             <li><a class="footer__link" href="index.html">Inicio</a></li>
             <li>
               <a class="footer__link" href="./pages/about.html">Sobre Mi</a>
@@ -159,7 +167,7 @@
             <li>
               <a class="footer__link" href="./pages/designs.html">Contacto</a>
             </li>
-          </p>
+          </ul>
         </div>
       </section>
     </footer>
