--- a/pages/contact.html
+++ b/pages/contact.html
@@ -127,7 +127,9 @@
     <footer class="footer">
       <section class="footer__sec">
         <div class="footer__contact">
-          <strong>Contacto</strong>
+          <p>
+            <strong class="footer__title">Contacto</strong>
+          </p>
           <br />
           <a
             href="https://github.com/KilluaOR"
@@ -159,6 +161,9 @@
         <div class="footer__paginas">
           <p>
             <strong>Páginas</strong>
+          </p>
+          <br />
+          <ul class="footer__list">
             <li><a class="footer__link" href="index.html">Inicio</a></li>
             <li>
               <a class="footer__link" href="./pages/about.html">Sobre Mi</a>
@@ -172,7 +177,7 @@
             <li>
               <a class="footer__link" href="./pages/designs.html">Contacto</a>
             </li>
-          </p>
+          </ul>
         </div>
       </section>
     </footer>
