changes in designs

--- a/pages/designs.html
+++ b/pages/designs.html
@@ -86,6 +86,8 @@
       <section class="container designs">
         <div class="design__item design__item--1">
           <img class="design__img" src="" alt="design" />
+        </div>
+        <div class="design__item--2">
           <h2 class="design__title">Design 1</h2>
           <p class="design__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -94,8 +96,10 @@
             illum vero ab quibusdam adipisci tenetur minima.
           </p>
         </div>
-        <div class="design__item design__item--2">
+        <div class="design__item design__item--3">
           <img class="design__img" src="" alt="design" />
+        </div>
+        <div class="design__item--4">
           <h2 class="design__title">Design 2</h2>
           <p class="design__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
@@ -104,7 +108,7 @@
             at iste velit sapiente!
           </p>
         </div>
-        <div class="design__item design__item--3">
+        <div class="design__item design__item--5">
           <button class="design__btn">
             <a class="design__btn--text" href="contact.html"
               >Contactame para pedir tu diseño</a
