changes in responsive

--- a/pages/designs.html
+++ b/pages/designs.html
@@ -87,7 +87,7 @@
         <div class="design__item design__item--1">
           <img class="design__img" src="" alt="design" />
         </div>
-        <div class="design__item--2">
+        <div class="design__item design__item--2">
           <h2 class="design__title">Design 1</h2>
           <p class="design__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -99,7 +99,7 @@
         <div class="design__item design__item--3">
           <img class="design__img" src="" alt="design" />
         </div>
-        <div class="design__item--4">
+        <div class="design__item design__item--4">
           <h2 class="design__title">Design 2</h2>
           <p class="design__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
