--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
@@ -85,7 +89,9 @@
       <!--formulario-->
       <section class="container contact">
         <div class="contact__item">
-          <h2 class="contact__title">Contactame:</h2>
+          <h2 class="animate__animated animate__tada contact__title">
+            Contactame:
+          </h2>
         </div>
         <div class="contact__item contact__item--img">
           <img class="contact__img" src="" alt="imagen" />
