--- a/pages/designs.html
+++ b/pages/designs.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
@@ -88,7 +92,9 @@
           <img class="design__img" src="" alt="design" />
         </div>
         <div class="design__item design__item--2">
-          <h2 class="design__title">Design 1</h2>
+          <h2 class="animate__animated animate__tada design__title">
+            Design 1
+          </h2>
           <p class="design__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Necessitatibus rerum maxime sint, consequuntur eaque asperiores
@@ -100,7 +106,9 @@
           <img class="design__img" src="" alt="design" />
         </div>
         <div class="design__item design__item--4">
-          <h2 class="design__title">Design 2</h2>
+          <h2 class="animate__animated animate__tada design__title">
+            Design 2
+          </h2>
           <p class="design__text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor
             excepturi numquam odit laborum velit recusandae, iste consequuntur
