--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
@@ -85,7 +89,9 @@
     <main class="main">
       <section class="container projects">
         <div class="projects__header">
-          <h1 class="projects__title">Algunos de mis proyectos</h1>
+          <h1 class="animate__animated animate__tada projects__title">
+            Algunos de mis proyectos
+          </h1>
         </div>
         <div class="projects__item projects__item--form">
           <a
