changes in contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -109,7 +109,7 @@
               name="name"
               required
             />
-            <label class="ccontact__label contact__label--email" for="email"
+            <label class="contact__label contact__label--email" for="email"
               >Email:</label
             >
             <input
