cambios en flex de contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,7 +90,7 @@
       <section class="container contact">
         <div class="contact__item">
           <h2 class="animate__animated animate__tada contact__title">
-            Contactame:
+            Contactame
           </h2>
           <img class="contact__img" src="" alt="imagen" />
         </div>
