--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     <!--main-->
     <main class="main">
       <div
-        class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
+        class="index__container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
       >
-        <h1 class="main__title">Ornella Romano</h1>
-        <img class="main__image" src="" alt="foto" />
-        <h2 class="main__subt">Web Developer</h2>
+        <h1 class="index__title">Ornella Romano</h1>
+        <img class="index__image" src="images\retrato.jpg" alt="foto" />
+        <h2 class="index__subt">Web Developer</h2>
       </div>
     </main>
     <!--footer-->
