--- a/pages/projects.html
+++ b/pages/projects.html
@@ -131,7 +131,7 @@
             </p>
           </a>
         </div>
-        <div class="project__item project__item--docs">
+        <div class="projects__item projects__item--docs">
           <a
             href="http://127.0.0.1:5500/technical%20documentation%20page/index.html"
             target="_blank"
