responsive de contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,7 +92,11 @@
           <h2 class="animate__animated animate__tada contact__title">
             Contactame
           </h2>
-          <img class="contact__img" src="" alt="imagen" />
+          <img
+            class="contact__img"
+            src="../images/Office cat man 😼.jpg"
+            alt="imagen"
+          />
         </div>
         <form class="contact__form" action="procesarform" method="post">
           <div class="contact__form-fieldset">
