arreglos en responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -84,7 +84,7 @@
     <main class="main">
       <!--breve descripción de mi persona-->
       <section class="container about">
-        <div class="about__header about__section--parte1">
+        <div class="about__setion about__section--parte1">
           <h2 class="about__title">Ornella Romano</h2>
           <img class="about__img" src="" alt="imagen" />
         </div>
