arreglos en rutas de img

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              class="svg"
-              src="images/WhatsApp Image 2025-04-23 at 19.19.47.png"
-              alt="logo"
-            />
+            <img class="svg" src="images/WhatsApp-Image.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler pe-8"
@@ -98,7 +94,7 @@
         class="index__container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
       >
         <h1 class="index__title">Ornella Romano</h1>
-        <img class="index__image" src="images\retrato.jpg" alt="foto" />
+        <img class="index__image" src="images/retrato.jpg" alt="foto" />
         <h2 class="index__subt">Web Developer</h2>
       </div>
     </main>
