--- a/pages/designs.html
+++ b/pages/designs.html
@@ -26,11 +26,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              class="svg"
-              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.png"
-              alt="logo"
-            />
+            <img class="svg" src="../images/WhatsApp-Image.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler pe-8"
@@ -89,7 +85,7 @@
     <main class="main">
       <section class="container designs">
         <div class="design__item design__item--1">
-          <img class="design__img" src="" alt="design" />
+          <img class="design__img" src="../images/diseño-1.jpg" alt="design" />
         </div>
         <div class="design__item design__item--2">
           <h2 class="animate__animated animate__tada design__title">
