--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,11 +26,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              class="svg"
-              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.png"
-              alt="logo"
-            />
+            <img class="svg" src="../images/WhatsApp-Image.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler pe-8"
@@ -101,7 +97,7 @@
           >
             <img
               class="project__img"
-              src="https://i.postimg.cc/8zqk7sqv/Captura-de-pantalla-2024-10-29-135644.jpg"
+              src="../images/Registration-Form.jpg"
               alt="project"
             />
             <p class="project__title">
@@ -120,7 +116,7 @@
           >
             <img
               class="project__img"
-              src="https://i.postimg.cc/CLcspp9X/Captura-de-pantalla-2024-10-29-145653.jpg"
+              src="../images/Survey-form.jpg"
               alt="project"
             />
             <p class="project__title">
@@ -139,7 +135,7 @@
           >
             <img
               class="project__img"
-              src="https://i.postimg.cc/hGdLmzhR/Captura-de-pantalla-2024-10-29-145850.jpg"
+              src="../images/Technical-Documentation-Page.jpg"
               alt="project"
             />
             <p class="project__title">
