--- a/pages/about.html
+++ b/pages/about.html
@@ -22,11 +22,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              class="svg"
-              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.png"
-              alt="logo"
-            />
+            <img class="svg" src="../images/WhatsApp-Image.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler pe-8"
