--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,11 +26,7 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              class="svg"
-              src="../images/WhatsApp Image 2025-04-23 at 19.19.47.png"
-              alt="logo"
-            />
+            <img class="svg" src="../images/WhatsApp-Image.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler pe-8"
@@ -94,7 +90,7 @@
           </h2>
           <img
             class="contact__img"
-            src="../images/Office cat man 😼.jpg"
+            src="../images/Office-cat-man.jpg"
             alt="imagen"
           />
         </div>
