--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,7 @@
       <section class="container about">
         <div class="about__setion about__section--parte1">
           <h2 class="about__title">Ornella Romano</h2>
-          <img class="about__img" src="" alt="imagen" />
+          <img class="about__img" src="../images/retrato.jpg" alt="imagen" />
         </div>
         <div class="about__section about__section--parte2">
           <p class="about__texto">
