arreglo en rutas

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -188,18 +188,18 @@
           </p>
           <br />
           <ul class="footer__list">
-            <li><a class="footer__link" href="index.html">Inicio</a></li>
+            <li><a class="footer__link" href="../index.html">Inicio</a></li>
             <li>
-              <a class="footer__link" href="./pages/about.html">Sobre Mi</a>
+              <a class="footer__link" href="about.html">Sobre Mi</a>
             </li>
             <li>
-              <a class="footer__link" href="./pages/projects.html">Proyectos</a>
+              <a class="footer__link" href="projects.html">Proyectos</a>
             </li>
             <li>
-              <a class="footer__link" href="./pages/designs.html">Diseños</a>
+              <a class="footer__link" href="designs.html">Diseños</a>
             </li>
             <li>
-              <a class="footer__link" href="./pages/designs.html">Contacto</a>
+              <a class="footer__link" href="contact.html">Contacto</a>
             </li>
           </ul>
         </div>
