agregando meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
+
+    <meta
+      name="description"
+      content="Portfolio profesional de diseño y desarrollo web de Ornella Romano. Descubrí mis proyectos y contactame."
+    />
+
+    <meta
+      name="keywords"
+      content="diseño web, desarrollo front-end, portfolio, HTML, CSS"
+    />
+
+    <meta name="author" content="Ornella Romano" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
